--- a/static/configuration.json
+++ b/static/configuration.json
@@ -7,9 +7,9 @@
     "useBackgroundImage": false,
     "backgroundColorLeft": "#2690F9",
     "backgroundColorRight": "#FC2D2D",
-    "audioUrl": "http://sc1.111ttt.cn:8282/2018/1/03m/13/396131232171.m4a?tflag=1519095601&pin=6cd414115fdb9a950d827487b16b5f97#.mp3",
+    "audioUrl": "http://yun.funclown.cn/data/User/admin/home/%E6%96%87%E4%BB%B6/yy/%E4%B8%80%E6%9B%B2%E7%9B%B8%E6%80%9D.mp3",
     "mini": false,
     "webSites":[
-        {"name":"我的云" , "url":"https://yun.funclown.cn"}
+        {"name":"我的云" , "url":"http://yun.funclown.cn"}
     ]
 }
